--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chess"
 version = "0.3.0"
-authors = ["Lucas Micheloni <lucas.michelonidesouza@gmail.com>"]
+authors = ["Alice Micheloni <alicemicheloni@tutanota.com>"]
 edition = "2018"
 
 [dependencies]
